fix navbar on smaller screens

--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -28,7 +28,7 @@
 .helpBtn {    
     background: $main-blue;
     color: white;
-    padding: 0.75rem 2rem;
+    padding: 0.75rem 1.75rem;
     border: none;
     border-radius: 5px;
     cursor: pointer;   
